message(STATUS "src This is SOURCE dir " ${PROJECT_SOURCE_DIR}/src)

# 添加子目录
ADD_SUBDIRECTORY(1Chapter)
ADD_SUBDIRECTORY(2Chapter)
ADD_SUBDIRECTORY(5Chapter)
# ADD_SUBDIRECTORY(lambda)
# ADD_SUBDIRECTORY(newEnumClass)
# ADD_SUBDIRECTORY(autoDeduction)
ADD_SUBDIRECTORY(17Chapter)
ADD_SUBDIRECTORY(18Chapter)
ADD_SUBDIRECTORY(27Chapter)
ADD_SUBDIRECTORY(29Chapter)